--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>ZEPHYRA</title>
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 </head>
+
 <body>
     <div th:fragment="navbar">
         <div class="sidebar">
@@ -23,6 +25,13 @@
                             <i class="bi bi-people-fill"></i> Administrar Usuarios
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/clientes}">
+                            <i class="bi bi-people-fill"></i> Administrar Clientes
+                        </a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/Ventas}">
                             <i class="bi bi-speedometer2"></i> Realizar Venta
@@ -34,15 +43,21 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#submenuReportes" role="button" aria-expanded="false" aria-controls="submenuReportes">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#submenuReportes"
+                            role="button" aria-expanded="false" aria-controls="submenuReportes">
                             <i class="bi bi-bar-chart-line-fill"></i> Reportes
                         </a>
                         <div class="collapse submenu" id="submenuReportes">
-                            <a class="nav-link" th:href="@{/GestionVentas}"><i class="bi bi-file-earmark-text"></i> Gestión de Ventas</a>
-                            <a class="nav-link" th:href="@{/GestionCompras}"><i class="bi bi-cart4"></i> Gestión de Compras</a>
-                            <a class="nav-link" th:href="@{/GestionInventario}"><i class="bi bi-box"></i> Gestión de Inventario</a>
-                            <a class="nav-link" th:href="@{/GestionProveedores}"><i class="bi bi-box"></i> Gestión de Proveedores</a>
-                            <a class="nav-link" th:href="@{/GestionClientes}"><i class="bi bi-box"></i> Gestión de Clientes</a>
+                            <a class="nav-link" th:href="@{/GestionVentas}"><i class="bi bi-file-earmark-text"></i>
+                                Gestión de Ventas</a>
+                            <a class="nav-link" th:href="@{/GestionCompras}"><i class="bi bi-cart4"></i> Gestión de
+                                Compras</a>
+                            <a class="nav-link" th:href="@{/GestionInventario}"><i class="bi bi-box"></i> Gestión de
+                                Inventario</a>
+                            <a class="nav-link" th:href="@{/GestionProveedores}"><i class="bi bi-box"></i> Gestión de
+                                Proveedores</a>
+                            <a class="nav-link" th:href="@{/GestionClientes}"><i class="bi bi-box"></i> Gestión de
+                                Clientes</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -61,4 +76,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
