--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -61,5 +61,6 @@
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/sidebar.js}"></script>
 </body>
 </html>
