--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
+<button class="btn btn-success d-md-none toggle-sidebar" type="button">
+  <i class="bi bi-list"></i>
+</button>
     <div th:fragment="navbar">
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
             <div class="nav-section">
                 <a class="navbar-brand" th:href="@{/inicio}">ZEPHYRA</a>
                 <ul class="nav flex-column">
@@ -54,5 +57,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/js/sidebar.js}"></script>
 </body>
 </html>
