--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -60,6 +60,18 @@
                 </div>
             </div>
         </div>
+
+<div class="row mt-4">
+    <div class="col-12 col-lg-8 mx-auto">
+        <div class="card shadow border-0">
+            <div class="card-body">
+                <h5 class="card-title text-center mb-4">Ingresos totales por mes (S/)</h5>
+                <canvas id="chart-ingresos-mensuales" height="120"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
     </div>
 
     <!-- Bootstrap Icons -->
@@ -67,11 +79,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script th:inline="javascript">
-        /*<![CDATA[*/
-        const labelsMeses = /*[[${labelsMeses}]]*/ [];
-        const ventasPorMes = /*[[${ventasPorMes}]]*/ [];
-        /*]]>*/
-    </script>
+    /*<![CDATA[*/
+    const labelsMeses = /*[[${labelsMeses}]]*/ [];
+    const ventasPorMes = /*[[${ventasPorMes}]]*/ [];
+    const totalVentaPorMes = /*[[${totalVentaPorMes}]]*/ [];
+    /*]]>*/
+</script>
     <script src="/js/dashboard-charts.js"></script>
 </body>
 </html>
